OCP_manifests/template.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongo
  namespace: filestore-server
  labels:
    app: mongodb
spec:
  ports:
  - port: 27017
  selector:
    app: mongodb
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mongodb
  namespace: filestore-server
spec:
  serviceName: "mongo"
  replicas: 2
  selector:
    matchLabels:
      app: mongodb
  template:
    metadata:
      labels:
        app: mongodb
    spec:
      serviceAccount: mongodb
      serviceAccountName: mongodb
      containers:
      - name: mongodb
        image: quay.io/rhn_support_apjagtap/mongodb:4.0.4
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: filestore
  namespace: filestore-server
spec:
  selector:
    matchLabels:
      app: filestore
  template:
    metadata:
      labels:
        app: filestore
    spec:
      containers:
      - name: filestore
        image: quay.io/rhn_support_apjagtap/filestore:v2
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: filestore
  namespace: filestore-server
spec:
  ports:
  - port: 4500
    protocol: TCP
    targetPort: 4500
  selector:
    app: filestore
  sessionAffinity: None
  type: ClusterIP
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: filestore-server
  namespace: filestore-server
spec:
  port:
    targetPort: 4500
  to:
    kind: Service
    name: filestore
    weight: 100
  wildcardPolicy: None
